fixed progress bar and double scroll bar in the docs page

--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -1,4 +1,6 @@
 .navbar{
+    margin: 0;
+    padding: 0;
     background-color: var(--company-color) !important;
     position: sticky;
     top: 0;
